--- a/src/components/Button/style.module.css
+++ b/src/components/Button/style.module.css
@@ -22,7 +22,7 @@
     height: 55px;
     border-radius: 8px;
     border: 1px;
-    Padding: 7px, 32px, 7px, 32px;
+    padding: 7px, 32px, 7px, 32px;
     font-size: 18px;
     font-weight: 400;
     color: white;
