--- a/src/components/InputTextArea/style.module.css
+++ b/src/components/InputTextArea/style.module.css
@@ -1,19 +1,60 @@
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+.msgbox {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.msg {
+    font-family: "Heebo";
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0px;
+    text-align: left;
+    cursor: default;
+
+}
+.msg:hover{
+    cursor: default;
+}
+
+.description {
+    font-family: "Heebo";
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 21px;
+    letter-spacing: 0px;
+    text-align: left;
+    color: #919EAB;
+    cursor: default;
+
+}
+.description:hover{
+    cursor: default;
+}
+
 .textarea {
-    border: 3px solid grey;
-    border-radius: 5px;
+    border: 1px solid #DEE2E9;
+    border-radius: 8px;
     resize: none;
-    width: 100%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Heboo";
+    width: 666px;
+    height: 166px;
+    direction: rtl;
+    text-align: right;
+    padding: 5px;
 }
 
 .textarea:hover {
-    border: 3px solid rgb(81, 81, 232);
+    border: 1px solid rgb(81, 81, 232);
 }
 
 .textarea:focus,
 .textarea:focus-visible,
 .textarea:focus-within,
 .textarea:active {
-    border: 3px solid rgb(11, 11, 255);
+    border: 1px solid rgb(11, 11, 255);
     outline-color: rgb(11, 11, 255);
 }
