--- a/src/components/InputTextArea/style.module.css
+++ b/src/components/InputTextArea/style.module.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
+/* 
 .msgbox {
     display: flex;
     flex-direction: column;
@@ -33,7 +33,7 @@
 }
 .description:hover{
     cursor: default;
-}
+} */
 
 .textarea {
     border: 1px solid #DEE2E9;
