--- a/src/components/CampaignItem/style.module.css
+++ b/src/components/CampaignItem/style.module.css
@@ -6,8 +6,8 @@
 }
 
 .Campaign {
-    min-width: 230px;
     background-color: #E8E8E8;
+    min-width: 300px;
     height: 50px;
     display: flex;
     align-items: center;
@@ -17,8 +17,7 @@
 
 .item {
     display: flex;
-    width: 230px;
-    background-color: #E8E8E8;
+    min-width: 230px;
     height: 37px;
     text-align: center;
     align-items: center;
@@ -27,32 +26,38 @@
     font-size: 18px;
     font-family: 'Heebo', sans-serif;
     padding: 0 10px 0 0;
-}
-.nameitem{
-    width: 200px;
-    justify-content:start;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    text-align: left;
-    direction: rtl;
+    background-color: transparent;
 }
 
 .item:hover {
-    background-color: #FFFFFF;
     border-radius: 5px;
     padding: 0 10px 0 0;
+    background-color: #FFFFFF;
+}
+
+.nameitem {
+    min-width: 230px;
+    justify-content: start;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: right;
+    background-color: transparent;
+    direction: rtl;
 }
 
 .active {
+    min-width: 230px;
     padding: 0 0 0 10px;
+    /* background-color: #FFFFFF; */
     align-items: center;
     display: flex;
+    background-color: transparent;
 }
 
 .iconitem {
     align-items: center;
     width: 20px;
     padding: 7px 0 0 7px;
-    /* background-color: aqua; */
+    background-color: transparent;
 }
