--- a/src/components/CampaignList/style.module.css
+++ b/src/components/CampaignList/style.module.css
@@ -2,11 +2,11 @@
 
 .campaignList {
     display: block;
-    min-width: 300px;
+    max-width: 300px;
     min-height: 100px;
     float: right;
     padding: 20px, 12px, 20px, 12px;
-
+    
 }
 
 .line {
