--- a/src/pages/LeadInfoPage/style.module.css
+++ b/src/pages/LeadInfoPage/style.module.css
@@ -9,23 +9,25 @@
       --border-box-color: #F3F3F5;
   }
 
+
+
   .info {
       width: 1105px;
       height: 1200px;
-      padding: 34px 195.25px 315px 194.75px;
-      background-color: white;
       display: flex;
       flex-direction: column;
-      align-items: flex-end;
+      align-items: center;
+      gap: 37px;
+      padding: 195px;
   }
 
   .details {
       font-family: "Secular One", sans-serif;
       font-size: 24px;
       font-weight: 400;
-      width: 100%;
+      width: 800px;
       text-align: right;
-      padding: 0px 0px 34px 34px;
+      padding-top: 34px;
       display: flex;
       flex-direction: column;
   }
@@ -39,6 +41,9 @@
       display: flex;
       flex-direction: column;
       align-items: flex-end;
+      background-color: #ffffff;
+      gap: 20px;
+
   }
 
 
@@ -105,15 +110,24 @@
   }
 
 
-  
+ 
   .sentMessages{
     width: 715px;
     height: 353px;
     padding: 45px;
     border-radius: 8px;
-    background-color: #F7F7F7;
     border: 1px solid var(--border-box-color);
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    background-color: #F7F7F7;
+
+  }
+
+  .sentTitle{
+    font-family: var(--font);
+    font-size: 16px;
+    font-weight: 500;
+    text-align: right;
+    color: #000000;
   }
