--- a/src/components/InputWrapper/style.module.css
+++ b/src/components/InputWrapper/style.module.css
@@ -1,10 +1,8 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
 
 .InputWrapper {
+    text-align: right;
+    display:flex;
+    flex-direction: column;
     justify-content: center;
 
 }
