--- a/src/components/CampaignItem/style.module.css
+++ b/src/components/CampaignItem/style.module.css
@@ -6,7 +6,7 @@
 }
 
 .Campaign {
-    background-color: #E8E8E8;
+    background-color: #F7F7F7;
     min-width: 300px;
     height: 50px;
     display: flex;
