--- a/src/components/CampaignList/style.module.css
+++ b/src/components/CampaignList/style.module.css
@@ -12,7 +12,7 @@
 .line {
     width: 100%;
     height: 1px;
-    background-color: #E8E8E8;
+    background-color: #F7F7F7;
     justify-content: center;
 }
 
