--- a/src/components/PopUp/style.module.css
+++ b/src/components/PopUp/style.module.css
@@ -12,8 +12,8 @@
 }
 
 .popup {
-    width: 400px;
-    height: 400px;
+    /* width: 400px; */
+    /* height: 400px; */
     display: flex;
     flex-direction: column;
     background-color: rgb(255, 255, 255);
