--- a/src/components/Accordion/style.module.css
+++ b/src/components/Accordion/style.module.css
@@ -1,69 +1,73 @@
-
 .wrapper {
-    display: flex;
-    justify-content: center;
-    background-color: #F7F7F7;
+border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  background-color: #f7f7f7;
+margin: 30px 0 0 0;
+}
 
+.container {
+  width: 400px;
+  border: 0px solid #ccc;
+  border-radius: 5px;
+  overflow: hidden;
+  margin-top: 20px;
+  
+}
+
+.header {
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+}
+
+.title {
+  font-family: 'Heebo', sans-serif;
+  font-size: 15px;
+  font-weight: 600;
+}
+
+
+@keyframes slideIn {
+  0% {
+    transform: scale(0.9);
+    opacity: 0;
   }
   
-  .container {
-    width: 400px;
-    border: 0px solid #ccc;
-    border-radius: 5px;
-    overflow: hidden;
-    margin-top: 20px;
+  100% {
+    transform: scale(1);
+    opacity: 1;
     
   }
-  
-  .header {
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    cursor: pointer;
-  }
-  
-  .title {
-    font-family: 'Heebo', sans-serif;
-    font-size: 15px;
-    font-weight: 600;
-  }
-  
-
-  @keyframes slideIn {
-    0% {
-        transform: scale(0.9);
-        opacity: 0;
-    }
-
-    100% {
-        transform: scale(1);
-        opacity: 1;
-
-    }
 }
 
 .content {
+  height: 170px;
+  overflow-y: scroll;
   padding: 10px;
   
 }
+::-webkit-scrollbar {
+  width: 0px;
+}
 
-.single{
-    animation: slideIn 0.3s ease-in-out;
-    display: flex;
-    justify-content: center;
-    margin: 1px;
-    background-color: white;
-    height: 55px;
-    align-items: center;
-  }
+.single {
+  animation: slideIn 0.3s ease-in-out;
+  display: flex;
+  justify-content: center;
+  margin: 1px;
+  background-color: white;
+  height: 55px;
+  align-items: center;
+}
 
-  .open{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    font-size: 13.5px;
-    font-weight: 500;
-    color: #6b6b6b;
-  }
-   
+.open {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-size: 13.5px;
+  font-weight: 500;
+  color: #6b6b6b;
+}
