--- a/src/components/Register/style.module.css
+++ b/src/components/Register/style.module.css
@@ -1,19 +1,27 @@
-
-
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+.button {
+    display: flex;
+    /* כדי לאפשר שבר לשורות חדשות */
+    /* flex-wrap: wrap; */
+    /* כדי ליישר את האלמנטים אנכית */
+    align-items: center;
+    /* כדי ליישר את האלמנטים אופקית */
+    justify-content: space-between;
+    padding: 1rem;
+
+}
 
 
 .text {
     color: #000000;
     font-size: 16px;
     font-family: 'Heebo';
-    padding:  1rem;
+    padding: 1rem;
 }
 
 .inputSpace {
     margin: 0 30px;
-    
 }
 
 .inputText {
@@ -28,11 +36,11 @@
     height: 100vh;
 }
 
-.register{
+.register {
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-evenly;
-     min-height: 500px;
+    min-height: 300px;
     width: fit-content;
     text-align: end;
     padding: 1rem;
@@ -41,4 +49,8 @@
     /* align-items: center; */
     flex-direction: column;
     /* margin: 0 60px; */
+}
+
+.star{
+color: red;
 }
