--- a/src/components/Accordion/style.module.css
+++ b/src/components/Accordion/style.module.css
@@ -1,10 +1,15 @@
 .wrapper {
-border-radius: 10px;
+  border-radius: 10px;
   display: flex;
   justify-content: center;
   background-color: #f7f7f7;
-margin: 30px 0 0 0;
+  margin: 30px 0 0 0;
 }
+/* .icon{
+  display: flex;
+  justify-content: center;
+  background-color: #F7F7F7;
+} */
 
 .container {
   width: 400px;
@@ -12,7 +17,7 @@ margin: 30px 0 0 0;
   border-radius: 5px;
   overflow: hidden;
   margin-top: 20px;
-  
+  margin-bottom: 20px;
 }
 
 .header {
@@ -29,58 +34,18 @@ margin: 30px 0 0 0;
   font-weight: 600;
 }
 
-    display: flex;
-    justify-content: center;
-    background-color: #F7F7F7;
-
-  }
-  
-  .container {
-    width: 400px;
-    border: 0px solid #ccc;
-    border-radius: 5px;
-    overflow: hidden;
-    margin-top: 20px;
-   margin-bottom: 20px;
-  }
-  
-  .header {
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    cursor: pointer;
-  }
-  
-  .title {
-    font-family: 'Heebo', sans-serif;
-    font-size: 15px;
-    font-weight: 600;
-  }
-  
 
 @keyframes slideIn {
   0% {
     transform: scale(0.9);
     opacity: 0;
   }
-  
+
   100% {
     transform: scale(1);
     opacity: 1;
-    
+
   }
-  @keyframes slideIn {
-    0% {
-      height: 0px;
-        opacity: 0;
-    }
-
-    100% {
-      height: 400px;
-        opacity: 1;
-
-    }
 }
 
 .content {
@@ -88,15 +53,14 @@ margin: 30px 0 0 0;
   overflow-y: scroll;
   padding: 10px;
   max-height: 400px;
-  overflow-y:auto;
+  overflow-y: auto;
   animation: slideIn 0.3s ease-in-out;
 }
+
 ::-webkit-scrollbar {
   width: 0px;
 }
-::-webkit-scrollbar {
-  width: 0px;
-}
+
 
 .single {
   animation: slideIn 0.3s ease-in-out;
@@ -107,14 +71,7 @@ margin: 30px 0 0 0;
   height: 55px;
   align-items: center;
 }
-.single{
-    display: flex;
-    justify-content: center;
-    margin: 1px;
-    background-color: white;
-    height: 55px;
-    align-items: center;
-  }
+
 
 .open {
   display: flex;
@@ -123,28 +80,24 @@ margin: 30px 0 0 0;
   font-size: 13.5px;
   font-weight: 500;
   color: #6b6b6b;
+  gap: 10px;
 }
-  .open{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    font-size: 13.5px;
-    font-weight: 500;
-    color: #6b6b6b;
-  }
 
-  .content::-webkit-scrollbar {
-    width: 10px; /* Set the width of the scrollbar */
-  }
-  
-  /* Hide scrollbar track */
-  .content::-webkit-scrollbar-track {
-    background: transparent; /* Make the scrollbar track transparent */
-  }
-  
-  /* Style the scrollbar thumb */
-  .content::-webkit-scrollbar-thumb {
-    background: transparent; /* Make the scrollbar thumb transparent */
-    border-radius: 5px; /* Round the scrollbar thumb corners */
-  }
-   
+.content::-webkit-scrollbar {
+  width: 10px;
+  /* Set the width of the scrollbar */
+}
+
+/* Hide scrollbar track */
+.content::-webkit-scrollbar-track {
+  background: transparent;
+  /* Make the scrollbar track transparent */
+}
+
+/* Style the scrollbar thumb */
+.content::-webkit-scrollbar-thumb {
+  background: transparent;
+  /* Make the scrollbar thumb transparent */
+  border-radius: 5px;
+  /* Round the scrollbar thumb corners */
+}
