--- a/src/components/Button/style.module.css
+++ b/src/components/Button/style.module.css
@@ -51,3 +51,13 @@
 .cancel:hover {
     background-color:var(--white-hover);
 }
+
+.create {
+    text-decoration: none;
+    color: #000;
+    margin-right: 15px;
+    background: none;
+    float: right;
+    font-size: 16px;
+    border: none;
+}
