--- a/src/components/LeadItem/style.module.css
+++ b/src/components/LeadItem/style.module.css
@@ -21,6 +21,15 @@
       padding: 20px, 16px, 20px, 16px;
   }
 
+  .leadActive{
+    background-color: #F3F3F5;
+
+  }
+
+  .leadActive .activeIcon {
+    color: #0E9D85;
+}
+
   .lead:hover {
       background-color: #F3F3F5;
   }
