--- a/src/components/InputText/style.module.css
+++ b/src/components/InputText/style.module.css
@@ -43,7 +43,7 @@
 }
 
 .MsgName {
-    font-family: 'Heebo';
+    font-family: var(--default-font);
     display: flex;
     flex-direction: column;
     align-items: flex-end;
