logout gage, opens options

--- a/src/components/UserLogoutEdit/style.module.css
+++ b/src/components/UserLogoutEdit/style.module.css
@@ -3,11 +3,12 @@
     height: 70px;
     padding: 17px, 20px, 17px, 20px;
     border: 1px, 0px, 0px, 0px;
-    gap: 8px;
+    gap: 16px;
     display: flex;
     flex-wrap: wrap;
     align-content: center;
-    justify-content: space-around;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 
@@ -18,4 +19,6 @@
     left: 108px;
     top: 0px;
     border-radius: 300px;
+    /* padding-right: 10px; */
+    margin-right: 10px;
 }
