--- a/src/pages/LoginPage/style.module.css
+++ b/src/pages/LoginPage/style.module.css
@@ -10,7 +10,7 @@ a {
 
 .container {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     
     justify-content: center;
