--- a/src/components/LeadsTab/style.module.css
+++ b/src/components/LeadsTab/style.module.css
@@ -1,5 +1,12 @@
+.leadsTab{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    border: 2px solid black;
+}
+
 .LeadListHolder{
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
 }
