--- a/src/layout/style.module.css
+++ b/src/layout/style.module.css
@@ -1,7 +1,7 @@
 .layout{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: row;
-    justify-content: right;
+    direction: rtl;
 }
