--- a/src/layout/SideBar/style.module.css
+++ b/src/layout/SideBar/style.module.css
@@ -1,12 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
 .sidebar {
-    background: #F7F7F7 !important;
+    background: #F7F7F7;
     width: 320px;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    align-items: flex-end;
-    height: 100vh;
+    height: 100%;
 }
 .sidebar h1 {
     font-family: 'Secular One', sans-serif;
@@ -27,9 +26,7 @@
     list-style: none;
     margin-bottom: 15px;
     display: flex;
-    flex-direction: row-reverse;
     flex-wrap: nowrap;
-    justify-content: flex-start;
     margin: 15px 0px;
 }
 .sidebar ul li a {
@@ -56,16 +53,13 @@ border-bottom:1px solid #E8E8E8;
     font-weight: 400;
     letter-spacing: 0em;
     color: #6B6B6B;
-    text-align: right;
     line-height: 40px;
 }
 
 .item {
     display: flex;
-    flex-direction: row-reverse;
     flex-wrap: nowrap;
     align-content: space-between;
-    justify-content: flex-start;
     line-height: 24px;
     padding-right: 8px;
     padding-top: 40px;
