--- a/src/components/LeadItem/style.module.css
+++ b/src/components/LeadItem/style.module.css
@@ -11,7 +11,7 @@
   /* lead box */
 
   .lead {
-      width: 454px;
+      width: 100%;
       height: 90px;
       display: flex;
       flex-direction: row;
