--- a/src/components/SearchBar/style.module.css
+++ b/src/components/SearchBar/style.module.css
@@ -1,6 +1,6 @@
 .SearchBar {
     position: relative;
-    width: 454px;
+    width: 100%;
     height: 45px;
     padding: 5px 12px; 
     border-radius: 8px;
