--- a/src/layout/SideBar/style.module.css
+++ b/src/layout/SideBar/style.module.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
+
 .sidebar {
     background: #F7F7F7 !important;
     width: 320px;
@@ -8,6 +9,7 @@
     align-items: flex-end;
     height: 100vh;
 }
+
 .sidebar h1 {
     font-family: 'Secular One', sans-serif;
     font-size: 44px;
@@ -17,6 +19,7 @@
     text-align: right;
     margin: 0;
 }
+
 .sidebar ul li {
     font-family: Heebo;
     font-size: 18px;
@@ -32,24 +35,33 @@
     justify-content: flex-start;
     margin: 15px 0px;
 }
-.sidebar ul li a {
+
+.sidebar ul li a,
+.sidebar ul li span {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 20px;
     text-decoration: none;
     color: #6B6B6B;
     margin-right: 15px;
+    cursor: pointer;
 }
+
 svg {
     color: #6B6B6B;
 }
+
 .sidebartop {
-    border-bottom:1px solid #E8E8E8;
+    border-bottom: 1px solid #E8E8E8;
     padding: 32px 20px;
     width: 100%;
 }
 
 .lists {
-padding: 32px 20px;
-border-bottom:1px solid #E8E8E8;
+    padding: 32px 20px;
+    border-bottom: 1px solid #E8E8E8;
 }
+
 .liststitle {
     font-family: Heebo;
     font-size: 14px;
