--- a/src/components/Login/style.module.css
+++ b/src/components/Login/style.module.css
@@ -11,6 +11,13 @@
     /* border: 2px solid darkcyan; */
 }
 
+.button {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+}
+
 .centerDiv {
     margin: 0;
     display: grid;
@@ -24,10 +31,12 @@
     justify-content: space-evenly;
     height: 350px;
     width: fit-content;
-    text-align: center;
-    border: 1px solid #DEE2E9;
-    border-radius: 8px;
-    align-items: center;
+    /* text-align: center; */
+    text-align: end;
+    /* border: 1px solid #DEE2E9; */
+    /* border-radius: 8px; */
+    padding: 1rem;
+    /* align-items: center; */
     flex-direction: column;
     /* margin: 0 60px; */
 }
