--- a/src/components/PopUp/style.module.css
+++ b/src/components/PopUp/style.module.css
@@ -3,13 +3,15 @@
 
 .container {
     position: fixed;
+    top: 0;
+    right: 0;
     display: flex;
     flex-direction: column;
     background-color: rgba(0, 0, 0, 0.262);
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     justify-content: center;
-
+    z-index: 100;
 }
 
 @keyframes slideIn {
