--- a/src/components/NewMessageForm/style.module.css
+++ b/src/components/NewMessageForm/style.module.css
@@ -2,24 +2,23 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-
+    
 }
 
 .InputWrapper {
     justify-content: center;
-    display: flex;
-    /* border: 0px solid white; */
-
+    /* display: flex; */
+        /* border: 0px solid white; */
 }
 
 .header {
     height: 40px;
-
+    
     justify-content: space-between;
     align-items: center;
     display: flex;
     flex-direction: row;
-
+    
     margin: 20px;
 }
 
@@ -30,7 +29,7 @@ h2 {
 .exsit {
     display: flex;
     justify-content: center;
-
+    
 }
 
 .exsit:hover {
@@ -39,7 +38,7 @@ h2 {
 
 .input1 {
     margin: 30px;
-
+    
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -53,7 +52,7 @@ h2 {
 
 .actions {
     height: 40px;
-
+    
     justify-content: space-between;
     align-items: center;
     display: flex;
