--- a/src/components/PopUp/style.module.css
+++ b/src/components/PopUp/style.module.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
 
 .container {
@@ -7,17 +6,22 @@
     right: 0;
     flex-direction: column;
     background-color: rgba(0, 0, 0, 0.262);
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     z-index: 100;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+/* 
 .allpopup{
     display: flex;
     justify-content: center;
-    /* border: 2px solid firebrick; */
-        z-index: 100;
-}
+    /* border: 2px solid firebrick;  
+     z-index: 100; 
+}  */
+
 @keyframes slideIn {
     0% {
         transform: scale(0.9);
@@ -32,7 +36,8 @@
 }
 
 .popup {
-    /* width: 400px;
+    /* max-width: 700px; */
+    /* width: 800px;
     height: 400px; */
     display: flex;
     flex-direction: column;
@@ -41,6 +46,8 @@
     position: relative;
     animation: slideIn 0.3s ease-in-out;
     padding: 15px;
+    justify-content: center;
+    align-items: center;
     /* margin: 10px; */
 }
 
@@ -58,18 +65,6 @@
     width: 24px;
     height: 24px;
     cursor: pointer;
+    position: absolute;
+    left: 20px;
 }
-
-/* 
-.title {
-    margin: 20px;
-    font-family: 'Secular One', sans-serif;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 29px;
-    letter-spacing: 0em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-} */
