--- a/src/components/MessageItem/style.module.css
+++ b/src/components/MessageItem/style.module.css
@@ -11,12 +11,12 @@
   /* meaasge box */
 
   .message {
-      width: 454px;
+      width: 100%;
       height: 90px;
       display: flex;
       flex-direction: row;
       align-items: center;
-      justify-content: right;
+      justify-content: space-between;
       border-radius: 8px;
       padding: 20px, 16px, 20px, 16px;
       background-color: white;
@@ -25,12 +25,12 @@
 
   .messageActive{
     background-color: #F3F3F5;
-    width: 454px;
+    width: 100%;
     height: 90px;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: right;
+    justify-content: space-between;
     border-radius: 8px;
     padding: 20px, 16px, 20px, 16px;
 }
