--- a/src/components/MessageList/style.module.css
+++ b/src/components/MessageList/style.module.css
@@ -15,11 +15,20 @@
     display: flex;
     flex-direction: column;
     align-items: end;
-    width: 454px;
+    width: 100%;
     min-height: 552px;
     gap: 32px
 }
 
+.messages {
+    width: 100%;
+}
+
 .unorderedList {
     list-style: none;
+    width: 100%;
+}
+
+.unorderedList li {
+    width: 100%;
 }
