--- a/src/components/InfoMessageList/style.module.css
+++ b/src/components/InfoMessageList/style.module.css
@@ -15,11 +15,27 @@
     display: flex;
     flex-direction: column;
     align-items: end;
-    width: 454px;
+    width: 100%;
     min-height: 552px;
     gap: 32px
 }
 
+.messageListDiv{
+    width: 100%;
+}
+
+.messages {
+    width: 100%;
+}
+
 .unorderedList {
     list-style: none;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.unorderedList li {
+    width: 100%;
 }
