--- a/src/components/MessageItem/style.module.css
+++ b/src/components/MessageItem/style.module.css
@@ -18,7 +18,7 @@
       align-items: center;
       justify-content: space-between;
       border-radius: 8px;
-      padding: 20px, 16px, 20px, 16px;
+      padding: 20px 16px 20px 16px;
       background-color: white;
   }
 
@@ -32,7 +32,7 @@
     align-items: center;
     justify-content: space-between;
     border-radius: 8px;
-    padding: 20px, 16px, 20px, 16px;
+    padding: 20px 16px 20px 16px;
 }
 
   .message:hover {
@@ -58,7 +58,6 @@
       align-items: center;
       border: 1px solid var(--border-box-color);
       border-radius: 8px;
-      margin: 16px;
   }
 
   .activeIcon {
