--- a/src/components/Accordion/style.module.css
+++ b/src/components/Accordion/style.module.css
@@ -1,10 +1,12 @@
 .wrapper {
+  animation: slideIn 0.7s ease-in-out backwards;
   border-radius: 10px;
   display: flex;
   justify-content: center;
   background-color: #f7f7f7;
   margin: 30px 0 0 0;
 }
+
 /* .icon{
   display: flex;
   justify-content: center;
@@ -37,24 +39,48 @@
 
 @keyframes slideIn {
   0% {
-    transform: scale(0.9);
+    height: 0px;
     opacity: 0;
   }
 
   100% {
-    transform: scale(1);
+    height: 100px;
     opacity: 1;
 
   }
 }
 
+.hide {
+  animation: slideOut 0.3s ease-in-out forwards;
+}
+
+@keyframes slideOut {
+
+  0% {
+    height: 100px;
+    opacity: 1;
+    overflow: hidden;
+
+  }
+
+  100% {
+    height: 0px;
+    opacity: 0;
+    display: none;
+  }
+}
+
 .content {
-  height: 170px;
-  overflow-y: scroll;
   padding: 10px;
-  max-height: 400px;
-  overflow-y: auto;
-  animation: slideIn 0.3s ease-in-out;
+  max-height: 250px;
+  overflow-y: scroll;
+  /* overflow-y: auto; */
+}
+
+
+.content .hide {
+  height: 0;
+  transition: 0.3s all ease-in-out;
 }
 
 ::-webkit-scrollbar {
@@ -68,7 +94,6 @@
   justify-content: end;
   margin: 1px;
   background-color: white;
-  /* border: 2px solid hotpink; */
   height: 90px;
   align-items: center;
 }
@@ -86,19 +111,13 @@
 
 .content::-webkit-scrollbar {
   width: 10px;
-  /* Set the width of the scrollbar */
 }
 
-/* Hide scrollbar track */
 .content::-webkit-scrollbar-track {
   background: transparent;
-  /* Make the scrollbar track transparent */
 }
 
-/* Style the scrollbar thumb */
 .content::-webkit-scrollbar-thumb {
   background: transparent;
-  /* Make the scrollbar thumb transparent */
   border-radius: 5px;
-  /* Round the scrollbar thumb corners */
 }
