--- a/src/components/MessageItem/style.module.css
+++ b/src/components/MessageItem/style.module.css
@@ -16,7 +16,8 @@
       display: flex;
       flex-direction: row;
       align-items: center;
-      justify-content: space-between;
+      justify-content: right;
+      gap: 10px;
       border-radius: 8px;
       padding: 20px 16px 20px 16px;
       background-color: white;
