--- a/src/components/MessageList/style.module.css
+++ b/src/components/MessageList/style.module.css
@@ -14,10 +14,9 @@
 .MessageList {
     display: flex;
     flex-direction: column;
-    align-items: end;
     width: 100%;
-    min-height: 552px;
-    gap: 32px
+    height: 50%;
+    gap: 32px;
 }
 
 .messages {
