--- a/src/components/MsgListHolder/style.module.css
+++ b/src/components/MsgListHolder/style.module.css
@@ -1,9 +1,20 @@
+.listAndNew{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+
+}
+
 .MsgListHolder{
     display: flex;
     flex-direction: column;
     align-items: flex-end;
 }
 
-/* .messagesTab{
-
-} */
+.innerList {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    width: 100%;
+    overflow-y: scroll;
+}
