--- a/src/components/SearchBar/style.module.css
+++ b/src/components/SearchBar/style.module.css
@@ -1,5 +1,7 @@
 .SearchBar {
-    position: relative;
+    position: sticky;
+    top: 0;
+    background-color: white;
     width: 100%;
     height: 45px;
     padding: 5px 12px; 
