--- a/src/pages/CampaignPage/style.module.css
+++ b/src/pages/CampaignPage/style.module.css
@@ -7,7 +7,7 @@
     display: flex;
     height: 100%;
     width: 100%;
-    border: var(--test-border);
+    /* border: var(--test-border); */
 }
 
 .infoTab {
