--- a/src/components/InputText/style.module.css
+++ b/src/components/InputText/style.module.css
@@ -45,6 +45,6 @@
 .MsgName {
     font-family: var(--default-font);
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: flex-end;
 }
