--- a/src/components/NewMessageForm/style.module.css
+++ b/src/components/NewMessageForm/style.module.css
@@ -1,8 +1,9 @@
 
 .InputWrapper {
     justify-content: center;
+    direction: rtl;
     display: flex;
-    /* border: 0px solid white; */
+    padding:20px;
 
 }
 
@@ -27,7 +28,7 @@
     justify-content: space-between;
     align-items: center;
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
 
     margin: 30px;
 }
