--- a/src/components/LeadsTab/style.module.css
+++ b/src/components/LeadsTab/style.module.css
@@ -3,9 +3,10 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    border-left: 2px solid rgba(232, 232, 232, 1);
+    border-left: 2px solid var(--grayElement);
     max-width: 350px;
-    padding: 10px;
+    padding: 15px;
+    gap: 10px;
 }
 
 .LeadListHolder{
