--- a/src/components/MessageList/style.module.css
+++ b/src/components/MessageList/style.module.css
@@ -11,11 +11,11 @@
     color: #6B6B6B;
 }
 
-.MessageList {
+.messageList {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 50%;
+    height: 10%;
     gap: 32px;
 }
 
