--- a/src/components/MsgListHolder/style.module.css
+++ b/src/components/MsgListHolder/style.module.css
@@ -18,3 +18,10 @@
     width: 100%;
     overflow-y: scroll;
 }
+
+.newMsg{
+    /* position: absolute; */
+    height: 60px;
+    width: 100%;
+    border: var(--test-border);
+}
