--- a/src/components/MsgTab/style.module.css
+++ b/src/components/MsgTab/style.module.css
@@ -3,7 +3,8 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    /* border: 2px solid black; */
+    border-left: 2px solid var(--grayElement);
     max-width: 350px;
-    padding: 10px;
+    padding: 15px;
+    gap: 10px;
 }
