--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@ This will automatically apply the specified font family, size, weight, and color
   --header-font-weight: 400; /* Font weight for main headings (h1) */
   --header-color: #000000; /* Text color for main headings (h1), set to black */
   --test-border: 2px solid black; 
+  --grayElement: rgb(232, 232, 232);
 }
 
 * {
