--- a/src/components/Accordion/style.module.css
+++ b/src/components/Accordion/style.module.css
@@ -7,12 +7,6 @@
   margin: 30px 0 0 0;
 }
 
-/* .icon{
-  display: flex;
-  justify-content: center;
-  background-color: #F7F7F7;
-} */
-
 .container {
   width: 400px;
   border: 0px solid #ccc;
@@ -42,11 +36,11 @@
     height: 0px;
     opacity: 0;
   }
-
+  
   100% {
     height: 100px;
     opacity: 1;
-
+    
   }
 }
 
@@ -121,3 +115,9 @@
   background: transparent;
   border-radius: 5px;
 }
+/* 
+.icon{
+  display: flex;
+  justify-content: center;
+  background-color: #F7F7F7;
+} */
