--- a/src/components/Button/style.module.css
+++ b/src/components/Button/style.module.css
@@ -45,6 +45,7 @@
     font-weight: 400;
     color: #6B6B6B;
     font-family: var(--button-font);
+    cursor: pointer;
 
 }
 
@@ -60,4 +61,9 @@
     float: right;
     font-size: 16px;
     border: none;
+    cursor: pointer;
 }
+/* 
+.create:hover {
+    background-color:var(--white-hover);
+} */
