--- a/src/components/MessageItem/style.module.css
+++ b/src/components/MessageItem/style.module.css
@@ -31,17 +31,19 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: right;
+    gap: 10px;
     border-radius: 8px;
     padding: 20px 16px 20px 16px;
 }
 
-  .message:hover {
-      background-color: #F3F3F5;
-  }
+.messageActive .activeIcon{
+    color: #0E9D85;
 
-  .messageActive {
-      background-color: #F3F3F5;
+}
+
+  .message:hover {
+      background-color: #fafafa;
   }
 
   .message:active .activeIcon {
@@ -95,6 +97,7 @@
       font-size: 12px;
       color: var(--details);
       justify-content: right;
+      align-items: center;
   }
 
 
@@ -106,26 +109,47 @@
       align-items: center;
       gap: 10px;
       font-family: var(--font);
-      font-size: 12px;
       color:#0E9D85;
       font-size: 1em;
   }
 
-  .readIcon {
+.readIcon {
       color: #0E9D85;
   }
 
-  .unreadIcon {
+.unreadIcon {
       color: var(--details);
   }
 
-  .pendingIcon{
+.pendingIcon{
     color: var(--details);
 
   }
-
-.date .checkIcon .time{
+.time{
     font-size: 12px;
 }
+.creationDate{
+    font-size: 12px;
+
+}
+.checkIcon{
+    font-size: 12px;
+}
+.readIcon{
+    font-size: 12px;
+}
+.pendingIcon{
+    font-size: 12px;
+}
+.unreadIcon{
+    font-size: 12px;
+}
+
+
+
+
+
+
+
 
  
