--- a/src/pages/LeadInfoPage/style.module.css
+++ b/src/pages/LeadInfoPage/style.module.css
@@ -12,9 +12,8 @@
 
 
 .info {
-    width: 800px;
+    /* width: 800px; */
     min-width: 715px;
-
     display: flex;
     flex-direction: column;
     align-items: center;
