--- a/src/components/LeadsTab/style.module.css
+++ b/src/components/LeadsTab/style.module.css
@@ -1,10 +1,9 @@
 .leadsTab{
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 410px;
     height: 100%;
     border-left: 2px solid var(--grayElement);
-    max-width: 350px;
     padding: 15px;
     gap: 10px;
 }
