--- a/src/components/InputWrapper/style.module.css
+++ b/src/components/InputWrapper/style.module.css
@@ -17,6 +17,7 @@
     font-weight: 500;
     line-height: 24px;
     letter-spacing: 0px;
+    display: flex;
     
 }
 
@@ -25,3 +26,9 @@
     margin: 5px;
 }
 
+.asterisk{
+    color: red;
+
+    margin: 3px;
+    margin-top: 1px;
+}
