--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,6 @@ h1 {
   display: flex;
   flex-direction: column;
   background-color: violet;
-  margin-bottom: 70vh;
-  margin-right: 90vw;
+  margin-right: 70vh;
+  margin-left: 90vw;
 }
