--- a/src/layout/SideBar/style.module.css
+++ b/src/layout/SideBar/style.module.css
@@ -71,11 +71,9 @@ svg {
 .item {
     display: flex;
     flex-wrap: nowrap;
-    align-content: space-between;
+    align-items: center;
     line-height: 24px;
-    padding-right: 8px;
-    padding-top: 40px;
-    
+    padding: 8px;
 }
 
 .item svg {
