--- a/src/pages/CampaignPage/style.module.css
+++ b/src/pages/CampaignPage/style.module.css
@@ -12,8 +12,12 @@
 
 .infoTab {
     width: 100%;
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    height: 100vh;
+    overflow-y: scroll;
+    padding: 50px 20px;
+}
+
+.infoTab >div {
+    max-width: 800px;
+    margin: auto;
 }
