--- a/src/pages/LeadInfoPage/style.module.css
+++ b/src/pages/LeadInfoPage/style.module.css
@@ -75,21 +75,21 @@
 
 .detailsFrame {
     width: 100%;
-    min-width: 500px;
-    height: 353px;
-    padding: 45px;
+    padding: 20px;
     border-radius: 8px;
     border: 1px solid var(--border-box-color);
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    flex-wrap: wrap;
     background-color: #ffffff;
     gap: 20px;
 }
 
 table {
     width: 100%;
-    border-collapse: collapse;
+    border-collapse: separate;
+    border-spacing: 10px;
+    /* border-collapse: collapse; */
     margin-bottom: 20px;
 }
 
@@ -123,8 +123,8 @@ td {
 
 .sentMessagesContainer {
     width: 100%;
-    min-width: 500px;
-    height: 353px;
+    /* min-width: 500px; */
+    height: 370px;
     padding: 45px;
     border-radius: 8px;
     border: 1px solid var(--border-box-color);
