--- a/src/layout/SideBar/style.module.css
+++ b/src/layout/SideBar/style.module.css
@@ -54,9 +54,13 @@ svg {
 }
 
 .lists {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
     padding: 32px 20px;
     border-bottom: 2px solid var(--grayElement);
     border-top: 2px solid var(--grayElement);
+    gap: 8px;
 }
 
 .liststitle {
@@ -74,6 +78,7 @@ svg {
     align-items: center;
     line-height: 24px;
     padding: 8px;
+    border-radius: 8px;
 }
 
 .item svg {
@@ -83,8 +88,10 @@ svg {
     border-radius: 50%;
 }
 
-.item:hover{
-cursor: pointer;
-background-color:var(--white-hover);
+.item:hover {
+    cursor: pointer;
+    background-color: var(--white-hover);
 
 }
+
+.camplist {}
