--- a/src/layout/SideBar/style.module.css
+++ b/src/layout/SideBar/style.module.css
@@ -94,4 +94,9 @@ svg {
 
 }
 
-.camplist {}
+.camplist {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    gap: 30px;
+}
