--- a/src/pages/CampaignPage/style.module.css
+++ b/src/pages/CampaignPage/style.module.css
@@ -15,6 +15,9 @@
     height: 100vh;
     overflow-y: scroll;
     padding: 50px 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
 }
 
 .infoTab >div {
