--- a/src/components/LeadItem/style.module.css
+++ b/src/components/LeadItem/style.module.css
@@ -87,3 +87,15 @@
       color: var(--details-color);
       justify-content: right;
   }
+
+
+  .email{
+    font-size: 12px;
+    color: #6B6B6B;
+
+  }
+
+  .date{
+    font-size: 12px;
+    color: #6B6B6B;
+  }
