--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,15 @@ h1 {
   color: var(--header-color); /* Use this CSS variable for the h1 text color */
 }
 
+::-webkit-scrollbar-thumb {
+  background-color: #0E9D85; /* Set thumb color */
+  border-radius: 5px; /* Round the corners */
+  border: 2px solid #f7f7f7; 
+}
+::-webkit-scrollbar-track {
+  background-color: #ffffff; 
+  border-radius: 10px; /* Round the corners */
+  }
+  ::-webkit-scrollbar {
+    width: 8px;
+    }
