--- a/src/components/LeadItem/style.module.css
+++ b/src/components/LeadItem/style.module.css
@@ -22,7 +22,7 @@
   }
 
   .leadActive {
-      background-color: #F3F3F5;
+      background-color: #e5e5e7;
       width: 100%;
       height: 90px;
       display: flex;
