--- a/src/pages/CampaignPage/style.module.css
+++ b/src/pages/CampaignPage/style.module.css
@@ -14,7 +14,7 @@
     width: 100%;
     height: 100vh;
     overflow-y: scroll;
-    padding: 30px 20px;
+    padding: 30px;
     display: flex;
     flex-direction: column;
     gap: 25px;
