--- a/src/pages/LeadInfoPage/style.module.css
+++ b/src/pages/LeadInfoPage/style.module.css
@@ -13,7 +13,7 @@
 
   .info {
     /* width: 800px; */
-    min-width: 715px;
+    /* min-width: 715px; */
     display: flex;
     flex-direction: column;
     align-items: center;
