--- a/src/components/Accordion/style.module.css
+++ b/src/components/Accordion/style.module.css
@@ -2,6 +2,7 @@
   animation: slideIn 0.7s ease-in-out backwards;
   border-radius: 10px;
   display: flex;
+  height: 75px;
   justify-content: center;
   background-color: #f7f7f7;
   margin: 30px 0 0 0;
