--- a/src/components/InputText/style.module.css
+++ b/src/components/InputText/style.module.css
@@ -31,15 +31,18 @@
 }
 
 .inputLine:hover {
-    border: 3px solid rgb(81, 81, 232);
+    border: 2px solid #E8E8E8;
+        /* Please don't change the color!!! */
+
 }
 
 .inputLine:focus,
 .inputLine:focus-visible,
 .inputLine:focus-within,
 .inputLine:active {
-    border: 3px solid rgb(11, 11, 255);
-    outline-color: rgb(11, 11, 255);
+    border: 2px solid #E8E8E8;
+    outline-color: #E8E8E8;
+    /* Please don't change the color!!! */
 }
 
 .MsgName {
