--- a/src/components/Popover/style.module.css
+++ b/src/components/Popover/style.module.css
@@ -8,6 +8,7 @@
     flex-direction: column;
     border-radius: 10px;
     list-style-type: none;
+    box-shadow: 0px 7px 19px -7px rgba(0, 0, 0, 0.75);
 }
 
 .Popover ul {
@@ -23,8 +24,9 @@
     height: 50px;
     padding: 12px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: center;
+
 }
 
 .Popover li .icon {
@@ -32,4 +34,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.red:hover {
+    background-color: #F3F3F5;
+    color: rgb(157, 14, 14);
+    border-radius: 8px;
+
+}
+
+.green:hover {
+    background-color: #F3F3F5;
+    color: rgb(14, 157, 133);
+    border-radius: 8px;
+
 }
