style changes and added a routing component

--- a/src/components/ActivationStatusBox/style.module.css
+++ b/src/components/ActivationStatusBox/style.module.css
@@ -14,5 +14,9 @@
 }
 
 .messageHeader {
-    margin-top: 40px;
+    padding-top: 40px;
+}
+
+.messageHeaderWithLoader {
+    padding: 40px 0 40px;
 }
