--- a/src/components/Button/style.module.css
+++ b/src/components/Button/style.module.css
@@ -1,7 +1,7 @@
   @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
   :root {
-      --green-color: #0E9D85;
+      --green-color: rgb(14, 157, 133);
       --white-color: white;
       --white-color: white;
 
@@ -84,4 +84,20 @@
       color: white;
       font-family: var(--button-font);
       cursor: pointer;
+  }
+
+  .red {
+      background-color: rgb(200, 0, 0);
+      gap: 6px;
+      Width: 115px;
+      Height: 55px;
+      border-radius: 8px;
+      border: 1px;
+      padding: 7px, 32px, 7px, 32px;
+      font-size: 18px;
+      font-weight: 400;
+      color: white;
+      font-family: var(--button-font);
+      cursor: pointer;
+
   }
