added auto login logic upon user activation

--- a/src/components/ActivationStatusBox/style.module.css
+++ b/src/components/ActivationStatusBox/style.module.css
@@ -13,10 +13,11 @@
     /* margin-right: 50px; */
 }
 
-.messageHeader {
-    padding-top: 40px;
-}
 
 .messageHeaderWithLoader {
     padding: 40px 0 40px;
+}
+
+.finalText {
+    padding: 40px 0 10px;
 }
