--- a/src/components/MessagePage/style.module.css
+++ b/src/components/MessagePage/style.module.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 .MessagePage {
-    padding: 2rem;
+    padding: 15px 2rem;
     height: 100%;
     overflow-y: auto;
 }
