--- a/src/layout/SideBar/style.module.css
+++ b/src/layout/SideBar/style.module.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
 
 .sidebar {
     background: #F7F7F7;
@@ -39,16 +38,15 @@
     gap: 20px;
     text-decoration: none;
     color: #6B6B6B;
-    margin-right: 15px;
     cursor: pointer;
 }
 
-svg {
+.sidebar  svg {
     color: #6B6B6B;
 }
 
 .sidebartop {
-    padding: 32px 20px;
+    padding: 32px 15px;
     width: 100%;
 }
 
@@ -56,7 +54,7 @@ svg {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    padding: 32px 20px;
+    padding: 10px 15px;
     border-top: 2px solid var(--grayElement);
     gap: 8px;
     flex: 2;
