--- a/src/components/ExstraInfoForLead/style.module.css
+++ b/src/components/ExstraInfoForLead/style.module.css
@@ -1,6 +1,4 @@
-
-
-.layout{
+.layout {
   padding: 2rem;
   height: 100%;
   overflow-y: auto;
@@ -42,8 +40,8 @@ justify-content: center; */
 
 
 
-.allFields{
-  position: relative;
+.allFields {
+  /* position: relative; */
   width: 100%;
   padding: 30px 100px 60px 100px;
   display: flex;
@@ -53,6 +51,7 @@ justify-content: center; */
   border-radius: 8px;
   border: 1px solid var(--border-box-color);
 }
+
 .detailsFrame {
   /* margin: auto; */
   width: 100%;
@@ -64,14 +63,12 @@ justify-content: center; */
   gap: 20px;
 }
 
-.telAndEmail{
-display: flex;
-flex-direction: row;
-
-
+.telAndEmail {
+  display: flex;
+  flex-direction: row;
 }
 
-.infoCol{
+.infoCol {
   width: fit-content;
   display: flex;
   flex-direction: column;
@@ -79,7 +76,7 @@ flex-direction: row;
   gap: 20px;
 }
 
-.infoFullCol{
+.infoFullCol {
   /* background:red; */
   width: 100%;
 }
@@ -107,6 +104,3 @@ flex-direction: row;
   font-family: var(--font);
 
 }
-
-
-
