--- a/src/components/MsgTab/style.module.css
+++ b/src/components/MsgTab/style.module.css
@@ -28,7 +28,8 @@
   }
 
   .popOverContainer{
-    width: 100%;
+    width: 40px;
+    height: 40px;
     display: flex;
     justify-content: center;
   }
