--- a/src/components/Popover/style.module.css
+++ b/src/components/Popover/style.module.css
@@ -20,7 +20,7 @@
     cursor: pointer;
     background-color: transparent;
     border: none;
-    padding: 10px;
+    /* padding: 10px; */
     width: 100%;
     align-items: center;
    
