add edit + delete + popover to message item

--- a/src/components/MessageItem/style.module.css
+++ b/src/components/MessageItem/style.module.css
@@ -14,6 +14,10 @@
       padding: 20px 16px 20px 16px;
   }
 
+  .main ul{
+    width: 200px;
+  }
+
   .message {
       background-color: white;
   }
