--- a/src/components/LeadsTab/style.module.css
+++ b/src/components/LeadsTab/style.module.css
@@ -38,8 +38,8 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  display: flex;
-  justify-content: center;
+  /* display: flex; */
+  /* justify-content: center; */
   position: relative;
 }
 
