--- a/src/components/WebHookTab/style.module.css
+++ b/src/components/WebHookTab/style.module.css
@@ -29,8 +29,8 @@
 .popOverContainer {
   width: 40px;
   height: 40px;
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: center; */
 }
 
 .popOverContainer:hover {
