--- a/src/components/NewCampaignForm/style.module.css
+++ b/src/components/NewCampaignForm/style.module.css
@@ -26,11 +26,9 @@
 
 .actions {
     height: 40px;
-
     justify-content: space-between;
     align-items: center;
     display: flex;
     flex-direction: row-reverse;
-
-    margin: 30px;
+    margin: 30px 0;
 }
