--- a/src/components/WebHook/style.module.css
+++ b/src/components/WebHook/style.module.css
@@ -63,6 +63,7 @@
     justify-content: center;
     padding: 8px;
     border-radius: 8px;
+    padding-right: 1rem;
     gap: 15px;
     background-color: var(--green-color);
 
