--- a/src/components/Popover/style.module.css
+++ b/src/components/Popover/style.module.css
@@ -38,7 +38,7 @@
     z-index: 100;
     border-radius: 10px;
     list-style-type: none;
-    box-shadow: 0px 7px 19px -7px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 19px -7px rgba(0, 0, 0, 0.75);
 }
 
 .Popover ul {
@@ -47,8 +47,9 @@
     list-style: none;
     gap: 5px;
     padding: 5px;
-    width: max-content;
+    width: clamp(100px, 200px, 300px);
     align-items: stretch;
+    /* width: 100%; */
 }
 
 .Popover li {
@@ -71,14 +72,14 @@
 }
 
 .red:hover {
-    background-color: #F3F3F5;
+    /* background-color: #F3F3F5; */
     color: rgb(219, 0, 0);
     border-radius: 8px;
 
 }
 
 .green:hover {
-    background-color: #F3F3F5;
+    /* background-color: #F3F3F5; */
     color: rgb(14, 157, 133);
     border-radius: 8px;
 
